<resources>
    <string name="app_name">AZ Media Player</string>

    <string name="hello_msg_from_activity">Hello From Activity!</string>
    <string name="hello_msg_from_fragment">Hello From Fragment!</string>

    <string name="video_fragment">Video Fragment</string>
    <string name="music_fragment">Music Fragment</string>

    <string name="video">Video</string>
    <string name="music">Music</string>

    <string name="rationale_storage">This app needs access to your storage to access Video files.</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="file_info">File Info</string>

    <string name="share_via">Share Via</string>
    <string name="close">Close</string>

    <string name="title">Title</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="format">Format</string>
    <string name="path">Path</string>
    <string name="date">Date</string>
    <string name="information">Information</string>

</resources>
