<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResolutionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/resolution"
        app:layout_constraintStart_toStartOf="@+id/tvTitleLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleLabel" />

    <TextView
        android:id="@+id/tvSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/size"
        app:layout_constraintStart_toStartOf="@+id/tvResolutionLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvResolutionLabel" />

    <TextView
        android:id="@+id/tvFormatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/format"
        app:layout_constraintStart_toStartOf="@+id/tvSizeLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvSizeLabel" />

    <TextView
        android:id="@+id/tvPathLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/path"
        app:layout_constraintStart_toStartOf="@+id/tvFormatLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvFormatLabel" />

    <TextView
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPathLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPathLabel" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleLabel"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toTopOf="@+id/tvTitleLabel"
        tools:text="VID_29122020.mp4" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvDateLabel,tvFormatLabel,tvTitleLabel,tvResolutionLabel,tvPathLabel,tvSizeLabel" />

    <TextView
        android:id="@+id/tvResolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:text="1080x720" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tvResolution"
        app:layout_constraintTop_toBottomOf="@+id/tvResolution"
        tools:text="3.2MB" />

    <TextView
        android:id="@+id/tvFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tvSize"
        app:layout_constraintTop_toBottomOf="@+id/tvSize"
        tools:text="video/mp4" />

    <TextView
        android:id="@+id/tvPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvFormat"
        app:layout_constraintTop_toBottomOf="@+id/tvFormat"
        tools:text="/storage/emulated/0/WhatsApp/emulated/0/WhatsApp" />

    <TextView
        android:id="@+id/tvDateCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tvPath"
        app:layout_constraintTop_toBottomOf="@+id/tvPath"
        tools:text="2020-12-27 08:11:18" />

</androidx.constraintlayout.widget.ConstraintLayout>