<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_50">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deleteOptionContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/delete"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/imageDelete"
            app:layout_constraintStart_toEndOf="@+id/imageDelete"
            app:layout_constraintTop_toTopOf="@+id/imageDelete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shareOptionContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="@id/deleteOptionContainer"
        app:layout_constraintStart_toStartOf="@+id/deleteOptionContainer"
        app:layout_constraintTop_toBottomOf="@+id/deleteOptionContainer">

        <ImageView
            android:id="@+id/imageShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_share" />

        <TextView
            android:id="@+id/tvShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/imageShare"
            app:layout_constraintStart_toEndOf="@+id/imageShare"
            app:layout_constraintTop_toTopOf="@+id/imageShare" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fileInfoOptionContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="@id/shareOptionContainer"
        app:layout_constraintStart_toStartOf="@+id/shareOptionContainer"
        app:layout_constraintTop_toBottomOf="@+id/shareOptionContainer">

        <ImageView
            android:id="@+id/imageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/tvFileInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/file_info"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/imageInfo"
            app:layout_constraintStart_toEndOf="@+id/imageInfo"
            app:layout_constraintTop_toTopOf="@+id/imageInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>